--- a/Task_1_1_2/build.gradle
+++ b/Task_1_1_2/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'jacoco'
 }
 
-group = 'ru.nsu.syspro.zagitov.blackJack'
+group = 'ru.nsu.syspro.zagitov.blackjack'
 version = '1.0-SNAPSHOT'
 
 repositories {
